--- a/WEEK-6/inClass/index.html
+++ b/WEEK-6/inClass/index.html
@@ -8,7 +8,9 @@
     <h1>Week In Class</h1>
 
 
-    <script src="js/p5.js"></script>
+   <div id="mycontainer"></div>
+
+    <script src="js/p5.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
