MID term beautify

--- a/MID/index.html
+++ b/MID/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Week In Class</title>
+    <title>MID TERM PROJECT</title>
 </head>
 <body>
     <h1>Week In Class</h1>
